basic ui design for student profile has been done

--- a/css/style.css
+++ b/css/style.css
@@ -998,7 +998,7 @@ h5 {
 .nav-header {
   padding: 33px 25px;
   background-color: #2f4050;
-  background-image: url("../img/header-profile.png");
+  /* background-image: url("../img/header-profile.png"); */
 }
 .caret {
   display: inline-block;
