--- a/views/studentProfile.html
+++ b/views/studentProfile.html
@@ -1,37 +1,26 @@
-<div>
-  <div class="white-bg">
-    <div class="row border-bottom m-l-xs">
-      <i class="fa fa-users m-sm"></i>
-      <label class="m-sm m-l-xs text-muted font-bold">
-        Student Profile
-      </label>
-    </div>
+<div class="row border-bottom white-bg">
+  <div class="col-lg-12 m-t-xs">
+    <i class="fa fa-user m-r-sm"></i>
+    <label class="font-bold">Student Profile</label>
   </div>
-  <div class="row m-l-xs">
-    <div class="col-lg-3 m-t-md">
+</div>
+<div class="wrapper wrapper-content">
+  <div class="row">
+    <div class="col-lg-3">
       <div class="ibox-content text-center">
         <h3>Sathishkumar</h3>
-        <h5>Subramaniam</h5>
+        <h4>Subramaniam</h4>
         <div class="m-b-sm">
-          <img
-            alt="image"
-            class="rounded-circle"
-            src="../img/student-male-icon.jpg"
-          />
+          <img alt="image" class="rounded-circle" src="../img/boy.png" />
         </div>
-        <p class="font-bold">2017-2021 | BE CSE | 710311104035</p>
-
-        <div class="text-center">
-          <a href="#" class="btn btn-sm btn-white"
-            ><i class="fa fa-thumbs-up"></i> Like
-          </a>
-          <a href="#" class="btn btn-sm btn-primary"
-            ><i class="fa fa-heart"></i> Love</a
-          >
-        </div>
+        <p class="font-bold">
+          B.E CSE <br />
+          2017-2021 <br />
+          710311104035
+        </p>
       </div>
     </div>
-    <div class="col-lg-8 m-t-md">
+    <div class="col-lg-9">
       <div class="ibox">
         <div class="ibox-title"><h5>Student Activity Scores</h5></div>
         <div class="ibox-content">
@@ -125,9 +114,8 @@
       </div>
     </div>
   </div>
-  <div class="row m-l-xs"></div>
   <div class="row">
-    <div class="col-lg-8 m-t-md m-l-md">
+    <div class="col-lg-8">
       <div class="ibox">
         <div class="ibox-title">
           <h5>Student Credit Score</h5>
@@ -294,6 +282,276 @@
         </div>
       </div>
     </div>
-    <!-- <div class="col-lg-6"></div> -->
+    <div class="col-lg-4">
+      <div class="ibox">
+        <div class="ibox-title"><h5>Address Details</h5></div>
+        <div class="ibox-content">
+          <div class="row" href="#">
+            <div class="col-12">
+              <h3><strong>Sathishkumar</strong></h3>
+              <p><i class="fa fa-map-marker m-r-sm"></i> Tiruppur - 638702</p>
+              <hr />
+              <div>
+                <h4 class="text-success">Address Details</h4>
+                <div>
+                  <i class="fa fa-location-arrow m-r-sm"></i> 4/66, Edaiyapatti,
+                  Kokkampalayam, Dharapuram, Tiruppur, Tamil Nadu
+                </div>
+              </div>
+              <hr />
+              <div>
+                <h4 class="text-success">Communication Details</h4>
+                <div><i class="fa fa-phone m-r-sm"></i> +91 8344335123</div>
+                <div>
+                  <i class="fa fa-envelope m-r-sm"></i>
+                  sathishk746@gmail.com
+                </div>
+              </div>
+              <hr />
+              <div>
+                <h4 class="text-success">Aadhar ID</h4>
+                <div><i class="fa fa-id-badge m-r-sm"></i> 9996 2920 3201</div>
+              </div>
+              <hr />
+              <div class="contact-box">
+                <h4 class="text-success">Parents / Gaurdian Details</h4>
+                <hr />
+                <div>
+                  <i class="fa fa-id-card m-r-sm"></i> Geethamani (Mother)
+                </div>
+                <div><i class="fa fa-phone m-r-sm"></i> +91 9659225970</div>
+
+                <hr />
+                <div>
+                  <i class="fa fa-id-card m-r-sm"></i> Subramaniam (Father)
+                </div>
+                <div><i class="fa fa-phone m-r-sm"></i> +91 8344335123</div>
+                <div>
+                  <i class="fa fa-envelope m-r-sm"></i>
+                  sathishk746@gmail.com
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-10">
+      <div class="ibox">
+        <div class="ibox-title"><h5>Student Activities</h5></div>
+        <div class="ibox-content">
+          <ul class="nav nav-tabs">
+            <li>
+              <a class="nav-link active" data-toggle="tab" href="#tab-1">
+                <i class="fa fa-book"></i>
+                Articles Posted
+              </a>
+            </li>
+            <li>
+              <a class="nav-link" data-toggle="tab" href="#tab-2">
+                <i class="fa fa-file-text"></i>
+                Papers Presented
+              </a>
+            </li>
+            <li>
+              <a class="nav-link" data-toggle="tab" href="#tab-3">
+                <i class="fa fa-futbol-o"></i>
+                Sports Activities
+              </a>
+            </li>
+            <li>
+              <a class="nav-link" data-toggle="tab" href="#tab-4">
+                <i class="fa fa-bookmark"></i>
+                Event / Activity
+              </a>
+            </li>
+            <li>
+              <a class="nav-link" data-toggle="tab" href="#tab-5">
+                <i class="fa fa-tasks"></i>
+                Other Activity
+              </a>
+            </li>
+          </ul>
+          <div class="tab-content">
+            <div id="tab-1" class="tab-pane active">
+              <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                  <thead>
+                    <tr>
+                      <td>Article Name</td>
+                      <td>Presented Place</td>
+                      <td>Presented On</td>
+                      <td>Article Ratings</td>
+                      <td>Grade Points</td>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>
+                        <a href="#!Article">Satellite Crashes</a>
+                      </td>
+                      <td>
+                        ACET Campus
+                      </td>
+                      <td>12/12/2018</td>
+                      <td>
+                        <span class="label label-primary">
+                          4 <i class="fa fa-star"></i>
+                        </span>
+                      </td>
+                      <td><span class="label label-primary">8</span></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+            <div id="tab-2" class="tab-pane">
+              <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                  <thead>
+                    <tr>
+                      <td>Paper Name</td>
+                      <td>Presented Place</td>
+                      <td>Presented On</td>
+                      <td>Paper Ratings</td>
+                      <td>Grade Points</td>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>
+                        <a href="#!Paper">Status Book</a>
+                      </td>
+                      <td>
+                        ACET Campus
+                      </td>
+                      <td>12/12/2018</td>
+                      <td>
+                        <span class="label label-primary">
+                          5 <i class="fa fa-star"></i>
+                        </span>
+                      </td>
+                      <td><span class="label label-primary">9</span></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+            <div id="tab-3" class="tab-pane">
+              <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                  <thead>
+                    <tr>
+                      <td>Sport Name</td>
+                      <td>Conducted Place</td>
+                      <td>Conducted On</td>
+                      <td>Prize / Participation</td>
+                      <td>Grade Points</td>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>
+                        Football
+                      </td>
+                      <td>
+                        ACET Campus
+                      </td>
+                      <td>12/12/2018</td>
+                      <td>
+                        <span class="label label-primary">
+                          1 <i class="fa fa-trophy"></i>
+                        </span>
+                      </td>
+                      <td><span class="label label-primary">9</span></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+            <div id="tab-4" class="tab-pane">
+              <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                  <thead>
+                    <tr>
+                      <td>Event / Activity Name</td>
+                      <td>Student Role</td>
+                      <td>Conducted Place</td>
+                      <td>Conducted On</td>
+                      <td>Ratings</td>
+                      <td>Grade Points</td>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>
+                        SB Note
+                      </td>
+                      <td>
+                        Jurie
+                      </td>
+                      <td>
+                        ACET Campus
+                      </td>
+                      <td>12/12/2018</td>
+                      <td>
+                        <span class="label label-primary">
+                          5 <i class="fa fa-star"></i>
+                        </span>
+                      </td>
+                      <td><span class="label label-primary">9</span></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+            <div id="tab-5" class="tab-pane">
+              <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                  <thead>
+                    <tr>
+                      <td>Activity Name</td>
+                      <td>Student Role</td>
+                      <td>Conducted Place</td>
+                      <td>Conducted On</td>
+                      <td>Grade Points</td>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>
+                        SB Note
+                      </td>
+                      <td>
+                        Jurie
+                      </td>
+                      <td>
+                        ACET Campus
+                      </td>
+                      <td>12/12/2018</td>
+                      <td><span class="label label-primary">9</span></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-2">
+      <div class="widget navy-bg p-lg text-center">
+        <div class="m-b-md">
+          <i class="fa fa-shield fa-4x"></i>
+          <h1 class="m-xs">158</h1>
+          <h3 class="font-bold no-margins">
+            Grade
+          </h3>
+          <small>Points</small>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
