create action menus in students profile files

--- a/views/studentProfile.html
+++ b/views/studentProfile.html
@@ -2,6 +2,64 @@
   <div class="col-lg-12 m-t-xs">
     <i class="fa fa-user m-r-sm"></i>
     <label class="font-bold">Student Profile</label>
+    <div class="float-right">
+      <a href="#" class="btn btn-primary btn-xs">
+        <i class="fa fa-angle-double-left m-r-xs"></i>
+        Back to Profile List
+      </a>
+    </div>
+  </div>
+</div>
+<div class="row border-bottom white-bg">
+  <div class="col-lg-12 m-t-xs m-b-xs">
+    <div class="btn-group">
+      <button class="btn btn-primary btn-sm btn-outline" type="button">
+        <i class="fa fa-angle-left m-r-xs"></i>
+        Prev Profile
+      </button>
+      <button
+        data-toggle="dropdown"
+        class="btn btn-primary btn-sm btn-outline dropdown-toggle"
+      >
+        710311104035
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#">710311104035</a></li>
+        <li><a class="dropdown-item" href="#">710311104035</a></li>
+        <li><a class="dropdown-item" href="#">710311104035</a></li>
+        <li><a class="dropdown-item" href="#">710311104035</a></li>
+        <li><a class="dropdown-item" href="#">710311104035</a></li>
+        <li><a class="dropdown-item" href="#">710311104035</a></li>
+        <li><a class="dropdown-item" href="#">710311104035</a></li>
+      </ul>
+      <button class="btn btn-primary btn-sm btn-outline" type="button">
+        Next Profile
+        <i class="fa fa-angle-right m-l-xs"></i>
+      </button>
+    </div>
+    <div class="float-right">
+      <a class="btn btn-white btn-sm" title="Refresh Profile">
+        <i class="fa fa-refresh"></i>
+      </a>
+      <a class="btn btn-white btn-sm" title="Academic Details of this Student">
+        <i class="fa fa-book"></i>
+      </a>
+      <a
+        class="btn btn-white btn-sm"
+        title="Attendance Details of this Student"
+      >
+        <i class="fa fa-calendar"></i>
+      </a>
+      <a class="btn btn-white btn-sm" title="Send Mail to this Student">
+        <i class="fa fa-envelope"></i>
+      </a>
+      <a
+        class="btn btn-white btn-sm m-r-xs"
+        title="Download this profile as CSV"
+      >
+        <i class="fa fa-download"></i>
+      </a>
+    </div>
   </div>
 </div>
 <div class="wrapper wrapper-content">
