action menu for students module pages

--- a/views/studentsProfileList.html
+++ b/views/studentsProfileList.html
@@ -40,7 +40,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -74,7 +74,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -108,7 +108,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -142,7 +142,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -176,7 +176,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -213,7 +213,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -247,7 +247,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -281,7 +281,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -315,7 +315,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -349,7 +349,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -386,7 +386,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -420,7 +420,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -454,7 +454,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -488,7 +488,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -522,7 +522,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -559,7 +559,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -593,7 +593,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -627,7 +627,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -661,7 +661,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -695,7 +695,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -732,7 +732,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -766,7 +766,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -800,7 +800,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -834,7 +834,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -868,7 +868,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -905,7 +905,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -939,7 +939,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -973,7 +973,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -1007,7 +1007,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -1041,7 +1041,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="#!StudentsAcademicData"
+                              href="#!StudentsAcademics"
                               class="font-bold"
                             >
                               Academic Data's
@@ -1096,7 +1096,7 @@
                         <li>
                           <a
                             class="dropdown-item"
-                            href="#!StudentsAcademicData"
+                            href="#!StudentsAcademics"
                             class="font-bold"
                           >
                             Academic Data's
