--- a/views/studentsProfiles.html
+++ b/views/studentsProfiles.html
@@ -2,7 +2,9 @@
   <div class="row border-bottom white-bg">
     <div class="col-lg-12 m-t-xs">
       <i class="fa fa-group m-r-sm"></i>
-      <label class="font-bold">Search Students Profiles</label>
+      <label class="font-bold">
+        Students Profiles - 2017-2021 CSE Department Profile List
+      </label>
       <div class="float-right">
         <a href="#" class="btn btn-primary btn-xs">
           <i class="fa fa-angle-double-left m-r-xs"></i>
@@ -13,13 +15,35 @@
   </div>
   <div class="row border-bottom white-bg">
     <div class="col-lg-12 m-t-xs m-b-xs">
+      <div class="btn-group">
+        <button class="btn btn-primary btn-sm btn-outline" type="button">
+          <i class="fa fa-angle-left m-r-xs"></i>
+          Prev Batch
+        </button>
+        <button
+          data-toggle="dropdown"
+          class="btn btn-primary btn-sm btn-outline dropdown-toggle"
+        >
+          2017-2021
+        </button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">2028-2022</a></li>
+          <li><a class="dropdown-item" href="#">2028-2022</a></li>
+          <li><a class="dropdown-item" href="#">2028-2022</a></li>
+          <li><a class="dropdown-item" href="#">2028-2022</a></li>
+        </ul>
+        <button class="btn btn-primary btn-sm btn-outline" type="button">
+          Next Batch
+          <i class="fa fa-angle-right m-l-xs"></i>
+        </button>
+      </div>
       <div class="float-right">
         <div class="input-group">
           <input
             type="search"
-            class="form-control form-control-sm"
             title="Search Regno or Name"
             placeholder="Search Here.."
+            class="form-control form-control-sm"
           />
           <span class="input-group-append">
             <button type="button" class="btn btn-primary btn-sm">
@@ -29,32 +53,34 @@
         </div>
       </div>
       <div class="float-right">
-        <a class="btn btn-white btn-sm" title="Refresh all Profiles">
+        <a class="btn btn-white btn-sm" title="Refresh Profile">
           <i class="fa fa-refresh"></i>
         </a>
-        <a class="btn btn-white btn-sm" title="Academic Details of this Batch">
+        <a
+          class="btn btn-white btn-sm"
+          title="Academic Details of this Student"
+        >
           <i class="fa fa-book"></i>
         </a>
         <a
           class="btn btn-white btn-sm"
-          title="Attendance Details of this Batch"
+          title="Attendance Details of this Student"
         >
           <i class="fa fa-calendar"></i>
         </a>
-
-        <a class="btn btn-white btn-sm" title="Send Mail to this Batch">
+        <a class="btn btn-white btn-sm" title="Send Mail to this Student">
           <i class="fa fa-envelope"></i>
         </a>
-
         <a
           class="btn btn-white btn-sm m-r-xs"
-          title="Download this profiles as CSV"
+          title="Download this profile as CSV"
         >
           <i class="fa fa-download"></i>
         </a>
       </div>
     </div>
   </div>
+
   <div class="wrapper wrapper-content">
     <div class="row">
       <div class="col-lg-4">
