--- a/views/studentsAttendanceData.html
+++ b/views/studentsAttendanceData.html
@@ -122,6 +122,316 @@
               <table class="table table-striped">
                 <thead>
                   <tr>
+                    <th class="text-center">
+                      <input type="checkbox" class="i-checks" name="" />
+                    </th>
+                    <th class="text-center">#</th>
+                    <th class="text-center">Reg No</th>
+                    <th class="text-center">Student Name</th>
+                    <th class="text-center">Attendance Percentage</th>
+                    <th class="text-center">Total Days</th>
+                    <th class="text-center">Working Days</th>
+                    <th class="text-center">Holidays Days</th>
+                    <th class="text-center">Days Present</th>
+                    <th class="text-center">Days Absent</th>
+                    <th class="text-center">Days OnDuty</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td class="text-center">
+                      <input type="checkbox" name="" id="" />
+                    </td>
+                    <td class="text-center">1</td>
+                    <td class="text-center"><a href="#"> 710311104035</a></td>
+                    <td class="text-center">Sathishkumar</td>
+                    <td class="text-center">78.2</td>
+                    <td class="text-center">400</td>
+                    <td class="text-center">298</td>
+                    <td class="text-center">50</td>
+                    <td class="text-center">288</td>
+                    <td class="text-center">9</td>
+                    <td class="text-center">1</td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">
+                      <input type="checkbox" name="" id="" />
+                    </td>
+                    <td class="text-center">1</td>
+                    <td class="text-center"><a href="#"> 710311104035</a></td>
+                    <td class="text-center">Sathishkumar</td>
+                    <td class="text-center">78.2</td>
+                    <td class="text-center">400</td>
+                    <td class="text-center">298</td>
+                    <td class="text-center">50</td>
+                    <td class="text-center">288</td>
+                    <td class="text-center">9</td>
+                    <td class="text-center">1</td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">
+                      <input type="checkbox" name="" id="" />
+                    </td>
+                    <td class="text-center">1</td>
+                    <td class="text-center"><a href="#"> 710311104035</a></td>
+                    <td class="text-center">Sathishkumar</td>
+                    <td class="text-center">78.2</td>
+                    <td class="text-center">400</td>
+                    <td class="text-center">298</td>
+                    <td class="text-center">50</td>
+                    <td class="text-center">288</td>
+                    <td class="text-center">9</td>
+                    <td class="text-center">1</td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">
+                      <input type="checkbox" name="" id="" />
+                    </td>
+                    <td class="text-center">1</td>
+                    <td class="text-center"><a href="#"> 710311104035</a></td>
+                    <td class="text-center">Sathishkumar</td>
+                    <td class="text-center">78.2</td>
+                    <td class="text-center">400</td>
+                    <td class="text-center">298</td>
+                    <td class="text-center">50</td>
+                    <td class="text-center">288</td>
+                    <td class="text-center">9</td>
+                    <td class="text-center">1</td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">
+                      <input type="checkbox" name="" id="" />
+                    </td>
+                    <td class="text-center">1</td>
+                    <td class="text-center"><a href="#"> 710311104035</a></td>
+                    <td class="text-center">Sathishkumar</td>
+                    <td class="text-center">78.2</td>
+                    <td class="text-center">400</td>
+                    <td class="text-center">298</td>
+                    <td class="text-center">50</td>
+                    <td class="text-center">288</td>
+                    <td class="text-center">9</td>
+                    <td class="text-center">1</td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">
+                      <input type="checkbox" name="" id="" />
+                    </td>
+                    <td class="text-center">1</td>
+                    <td class="text-center"><a href="#"> 710311104035</a></td>
+                    <td class="text-center">Sathishkumar</td>
+                    <td class="text-center">78.2</td>
+                    <td class="text-center">400</td>
+                    <td class="text-center">298</td>
+                    <td class="text-center">50</td>
+                    <td class="text-center">288</td>
+                    <td class="text-center">9</td>
+                    <td class="text-center">1</td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">
+                      <input type="checkbox" name="" id="" />
+                    </td>
+                    <td class="text-center">1</td>
+                    <td class="text-center"><a href="#"> 710311104035</a></td>
+                    <td class="text-center">Sathishkumar</td>
+                    <td class="text-center">78.2</td>
+                    <td class="text-center">400</td>
+                    <td class="text-center">298</td>
+                    <td class="text-center">50</td>
+                    <td class="text-center">288</td>
+                    <td class="text-center">9</td>
+                    <td class="text-center">1</td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">
+                      <input type="checkbox" name="" id="" />
+                    </td>
+                    <td class="text-center">1</td>
+                    <td class="text-center"><a href="#"> 710311104035</a></td>
+                    <td class="text-center">Sathishkumar</td>
+                    <td class="text-center">78.2</td>
+                    <td class="text-center">400</td>
+                    <td class="text-center">298</td>
+                    <td class="text-center">50</td>
+                    <td class="text-center">288</td>
+                    <td class="text-center">9</td>
+                    <td class="text-center">1</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="ibox">
+          <div class="ibox-title">
+            <i class="fa fa-folder m-r-sm"></i>
+            <h5>Students Semester Attendance Details</h5>
+          </div>
+          <div class="ibox-content">
+            <div class="table-responsive m-t-sm">
+              <table class="table table-striped">
+                <thead>
+                  <tr>
+                    <th class="text-center">
+                      <input type="checkbox" class="i-checks" name="" />
+                    </th>
+                    <th class="text-center">#</th>
+                    <th class="text-center">Reg No</th>
+                    <th class="text-center">Student Name</th>
+                    <th class="text-center">Attendance Percentage</th>
+                    <th class="text-center">Total Days</th>
+                    <th class="text-center">Working Days</th>
+                    <th class="text-center">Holidays Days</th>
+                    <th class="text-center">Days Present</th>
+                    <th class="text-center">Days Absent</th>
+                    <th class="text-center">Days OnDuty</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td class="text-center">
+                      <input type="checkbox" name="" id="" />
+                    </td>
+                    <td class="text-center">1</td>
+                    <td class="text-center"><a href="#"> 710311104035</a></td>
+                    <td class="text-center">Sathishkumar</td>
+                    <td class="text-center">78.2</td>
+                    <td class="text-center">400</td>
+                    <td class="text-center">298</td>
+                    <td class="text-center">50</td>
+                    <td class="text-center">288</td>
+                    <td class="text-center">9</td>
+                    <td class="text-center">1</td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">
+                      <input type="checkbox" name="" id="" />
+                    </td>
+                    <td class="text-center">1</td>
+                    <td class="text-center"><a href="#"> 710311104035</a></td>
+                    <td class="text-center">Sathishkumar</td>
+                    <td class="text-center">78.2</td>
+                    <td class="text-center">400</td>
+                    <td class="text-center">298</td>
+                    <td class="text-center">50</td>
+                    <td class="text-center">288</td>
+                    <td class="text-center">9</td>
+                    <td class="text-center">1</td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">
+                      <input type="checkbox" name="" id="" />
+                    </td>
+                    <td class="text-center">1</td>
+                    <td class="text-center"><a href="#"> 710311104035</a></td>
+                    <td class="text-center">Sathishkumar</td>
+                    <td class="text-center">78.2</td>
+                    <td class="text-center">400</td>
+                    <td class="text-center">298</td>
+                    <td class="text-center">50</td>
+                    <td class="text-center">288</td>
+                    <td class="text-center">9</td>
+                    <td class="text-center">1</td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">
+                      <input type="checkbox" name="" id="" />
+                    </td>
+                    <td class="text-center">1</td>
+                    <td class="text-center"><a href="#"> 710311104035</a></td>
+                    <td class="text-center">Sathishkumar</td>
+                    <td class="text-center">78.2</td>
+                    <td class="text-center">400</td>
+                    <td class="text-center">298</td>
+                    <td class="text-center">50</td>
+                    <td class="text-center">288</td>
+                    <td class="text-center">9</td>
+                    <td class="text-center">1</td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">
+                      <input type="checkbox" name="" id="" />
+                    </td>
+                    <td class="text-center">1</td>
+                    <td class="text-center"><a href="#"> 710311104035</a></td>
+                    <td class="text-center">Sathishkumar</td>
+                    <td class="text-center">78.2</td>
+                    <td class="text-center">400</td>
+                    <td class="text-center">298</td>
+                    <td class="text-center">50</td>
+                    <td class="text-center">288</td>
+                    <td class="text-center">9</td>
+                    <td class="text-center">1</td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">
+                      <input type="checkbox" name="" id="" />
+                    </td>
+                    <td class="text-center">1</td>
+                    <td class="text-center"><a href="#"> 710311104035</a></td>
+                    <td class="text-center">Sathishkumar</td>
+                    <td class="text-center">78.2</td>
+                    <td class="text-center">400</td>
+                    <td class="text-center">298</td>
+                    <td class="text-center">50</td>
+                    <td class="text-center">288</td>
+                    <td class="text-center">9</td>
+                    <td class="text-center">1</td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">
+                      <input type="checkbox" name="" id="" />
+                    </td>
+                    <td class="text-center">1</td>
+                    <td class="text-center"><a href="#"> 710311104035</a></td>
+                    <td class="text-center">Sathishkumar</td>
+                    <td class="text-center">78.2</td>
+                    <td class="text-center">400</td>
+                    <td class="text-center">298</td>
+                    <td class="text-center">50</td>
+                    <td class="text-center">288</td>
+                    <td class="text-center">9</td>
+                    <td class="text-center">1</td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">
+                      <input type="checkbox" name="" id="" />
+                    </td>
+                    <td class="text-center">1</td>
+                    <td class="text-center"><a href="#"> 710311104035</a></td>
+                    <td class="text-center">Sathishkumar</td>
+                    <td class="text-center">78.2</td>
+                    <td class="text-center">400</td>
+                    <td class="text-center">298</td>
+                    <td class="text-center">50</td>
+                    <td class="text-center">288</td>
+                    <td class="text-center">9</td>
+                    <td class="text-center">1</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="ibox">
+          <div class="ibox-title">
+            <i class="fa fa-folder m-r-sm"></i>
+            <h5>Students Monthly Attendance Details</h5>
+          </div>
+          <div class="ibox-content">
+            <div class="table-responsive m-t-sm">
+              <table class="table table-striped">
+                <thead>
+                  <tr>
                     <th><input type="checkbox" class="i-checks" name="" /></th>
                     <th>Reg No</th>
                     <th>Student Name</th>
